# performance-test-efl

./: README.md  meson.build  meson_options.txt  performance-test-efl.xml
inc/: main.h
packaging/: performance-test-efl.spec
res/: meson.build  performance-test-efl.edc
src/: main.c
